# thesis-workspace

./: .gitignore  .gitmodules  LICENSE
Milestone Plan/: Milestones_pgfgantt.tex
literature_review/: 00_progress.md  01_mqtt_security_and_attacks.md  02_ml_based_ids.md  03_snort_and_snortml.md  05_Snort3.md  06_Takeaways.md  anchors.md  references.bib
prototype/docs/: MyTakeawayFromMQTT-18-12-25.md  To-Do-08-01-26.md  To-Do-12-12-25.md  c++quirks.md  mqtt_ml_architecture.md  plugin_architecture.md
prototype/src/: mqtt.c  mqtt.h
prototype/src/mqtt_inspector/: CMakeLists.txt  README.md  ips_mqtt_payload.cc  ips_mqtt_topic.cc  mqtt.cc  mqtt.h  mqtt_events.h  mqtt_ml.cc  mqtt_ml.h  mqtt_ml_module.cc  mqtt_ml_module.h  mqtt_module.cc  mqtt_module.h  mqtt_paf.cc  mqtt_paf.h
prototype/src/tools/: mqtt_feature_extractor.py  mqtt_model.tflite  mqtt_model.threshold  requirements.txt  train_mqtt_model.py
snort_original_source_code_review/: MyTakeawayAndQuestions-12-12-25.md
source_code_review/: MyTakeawayAndQuestions-12-12-25.md  To-Do-12-12-25.md  c++quirks.md  http_inspector.md  plugin_architecture.md
